yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
  namespace: __USERNAME__
spec:
  selector:
    matchLabels:
      app: code-server
  replicas: 1
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - image: codercom/code-server:latest
          imagePullPolicy: Always
          name: code-server
