yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: __USERNAME__
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: code-server
